--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "license": "MIT",
   "description": "utility functions for archiver",
-  "homepage": "https://github.com/archiverjs/archiver-utils",
+  "homepage": "https://github.com/archiverjs/archiver-utils#readme",
   "author": {
     "name": "Chris Talkington",
     "url": "http://christalkington.com/"
@@ -15,7 +15,6 @@
   "bugs": {
     "url": "https://github.com/archiverjs/archiver-utils/issues"
   },
-  "homepage": "https://github.com/archiverjs/archiver-utils#readme",
   "keywords": [
     "archiver",
     "utils"
@@ -35,7 +34,7 @@
     "glob": "^7.0.0",
     "graceful-fs": "^4.1.0",
     "lazystream": "^1.0.0",
-    "lodash": "^4.8.0",
+    "lodash": "4.17.10",
     "normalize-path": "^2.0.0",
     "readable-stream": "^2.0.0"
   },
